# MLOps-Project

./: .gitignore  Dockerfile  README.md  compose.yaml  justfile  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: exploration.ipynb  exploration.py
src/: main.py
src/data/: data.py
src/text_classifier/: config.py  main.py  schema.py
src/text_classifier/data/: data.py  embeddings.py  features.py  model.py  preprocessing.py
src/text_classifier/evaluation/: metrics.py
src/text_classifier/model/: model.py  models.py  pipeline.py  training.py
