[project]
name = "mlops-project"
version = "0.1.0"
description = "WIP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "tensorflow>=2.21.0",
    "xgboost>=3.3.0",
]

[dependency-groups]
notebook = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.1",
    "jupytext>=1.19.4",
    "matplotlib>=3.11.0",
    "seaborn>=0.13.2",
]
