[project]
name = "text-ops"
version = "0.1.0"
description = "A practical MLOps demonstration project for building and managing a text classification system in a production-like environment."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlflow>=1.27.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "sentence-transformers>=5.6.0",
    "tensorflow>=2.21.0",
    "xgboost>=3.3.0",
]

[dependency-groups]
notebook = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.1",
    "jupytext>=1.19.4",
    "matplotlib>=3.11.0",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/text_classifier"]
